# fins-web

./: .dockerignore  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/admin/: .env.example  README.md  index.html  package.json  vite.config.ts
apps/sso/: README.md  index.html  package.json
apps/user/: .env.example  README.md  index.html  package.json  vite.config.ts
deploy/: Dockerfile.bff  Dockerfile.nginx  README.md  docker-compose.yml
deploy/nginx/: default.conf
openapi/: README.md  _inject-error-responses.mjs  asyncApi.transactions.yaml  notif-firebase.json  notif_api.json  openApi.backend-gateway.yaml  openApi.public.yaml  openApi.sso.yaml
openapi/from-backend/: prefs.json  (+8 more)
services/bff/: .env.example  README.md  openapi-python-client.upstream.yaml  pyproject.toml
services/bff/app/: api_delay_middleware.py  bff_user.py  circuit_breaker.py  config.py  constants.py  deps.py  errors.py  idempotency_key_middleware.py  main.py  mock_fx.py  mock_store.py  notification_sse_mock.py  public_upstream_shape.py  request_logging_middleware.py  session_store.py  simulate_random_error_middleware.py  upstream_auth.py  upstream_context.py  upstream_deps.py  upstream_exchange_log.py  upstream_http_logging.py  upstream_runtime.py  upstream_tx_broadcast.py  ws_hub.py
services/bff/app/routers/: notifications_proxy.py  public.py  public_mock.py  public_upstream.py  sso.py  ws_transactions.py
services/bff/scripts/: generate_browser_models.py  generate_upstream_client.py  merge_browser_openapi.py
services/bff/static/: README.md
(+134 files in other folders)
