[project]
name = "fins-bff"
version = "0.0.0"
description = "BFF: API + статика SSO для Fins"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "httpx>=0.28.1",
  "attrs>=24.0",
  "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "openapi-python-client>=0.21.0",
  "PyYAML>=6.0",
  "datamodel-code-generator[ruff]>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "generated"]
